# sheaf-coherence

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic.rs
memory/: JOURNAL.md
src/: agent.rs  cochain.rs  coherence.rs  cover.rs  error.rs  gluing.rs  laplacian.rs  lib.rs  obstruction.rs  persistence.rs  section.rs  sheaf.rs
tests/: integration.rs
