[package]
name = "sheaf-coherence"
version = "0.1.1"
edition = "2021"
description = "Cellular sheaf coherence for multi-agent belief alignment — sheaf Laplacian"
license = "MIT"
repository = "https://github.com/SuperInstance/sheaf-coherence"
keywords = ["sheaf", "coherence", "agent", "alignment", "laplacian"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
