[package]
name = "sheaf-coherence"
version = "0.1.0"
edition = "2021"
description = "Sheaf coherence for distributed constraint satisfaction and topological data analysis"
license = "MIT"
repository = "https://github.com/SuperInstance/sheaf-coherence"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
